--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "object-curly-newline": 0,
+    "implicit-arrow-linebreak": 0,
+    "comma-dangle": 0,
+    "function-paren-newline": 0
   }
 }
