--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.3",
+    "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "mongoose-unique-validator": "^2.0.3",
