--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,6 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": "off",
-    "object-curly-newline": 0,
-    "implicit-arrow-linebreak": 0,
-    "comma-dangle": 0,
-    "function-paren-newline": 0
+    "no-console": "off"
   }
 }
