--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "celebrate": "^12.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "express-winston": "^4.0.3",
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
