--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.4.11",
     "validator": "^13.1.1",
     "winston": "^3.3.3"
   }
